# llmsim

./: .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml
benchmarks/: README.md  __init__.py  baselines.py  offload_ceiling.py  pdes_scaling.py  replication_model.py  replication_scaling.py  test_benchmarks.py  test_llmsim_benchmarks.py  test_offload_ceiling.py  test_pdes_scaling.py  test_replication_scaling.py
benchmarks/baselines/: Darwin-arm64.json  Linux-x86_64.json
benchmarks/llmsim_models/: __init__.py  grid_conveyor.py  machine_shop.py  mm1.py
benchmarks/models/: __init__.py  grid_conveyor.py  machine_shop.py  mm1.py
docs/: deprecation-policy.md  index.md  migration-from-simpy.md  parallelism-decision-tree.md  part-deux.md  perf-notes.md  simpy-comparison.md
docs/examples/: agentic-workflow.md  index.md  ride-hailing.md
docs/guide/: core-concepts.md  getting-started.md  offload.md  pdes.md  realtime.md  replications.md  resources.md  tracing.md
docs/perf/: pdes-scaling.md  replication-scaling.md
docs/reference/: core.md  parallel.md  randomness.md  realtime.md  resources.md  tracing.md
examples/: __init__.py  confidence.py  smoke.py
examples/agentic_workflow/: __init__.py  kpis.py  model.py  offload.py  policies.py  study_capacity.py
examples/ride_hailing/: README.md  __init__.py  kpis.py  model.py  policies.py  sharded.py  study_fleet_sizing.py
scripts/: generate_example_charts.py  generate_perf_charts.py
specs/: mission.md  roadmap.md  tech-stack.md
specs/phase-0-scaffolding/: plan.md  requirements.md  validation.md
specs/phase-1-sequential-core/: plan.md  requirements.md  validation.md
specs/phase-2-parallel-replications/: plan.md  requirements.md  validation.md
specs/phase-3-pdes-sharding/: plan.md  requirements.md  validation.md
specs/phase-4-migration-guide/: plan.md  requirements.md  validation.md
specs/phase-4-offload/: plan.md  requirements.md  validation.md
specs/phase-4-realtime/: plan.md  requirements.md  validation.md
specs/phase-4.4-4.5/: api-audit.md  plan.md  requirements.md  validation.md
specs/phase-5-domain-example/: api-friction.md  plan.md  requirements.md  validation.md
src/llmsim/: __init__.py  rt.py  trace.py
src/llmsim/core/: __init__.py  conditions.py  errors.py  events.py  process.py  sim.py
src/llmsim/parallel/: __init__.py  backends.py  offload.py  replicate.py
src/llmsim/parallel/pdes/: __init__.py  analyze.py  channel.py  shard.py  sync.py
src/llmsim/rand/: __init__.py  streams.py
src/llmsim/resources/: __init__.py  base.py  container.py  resource.py  store.py
src/llmsim/scenario/: __init__.py  agent.py  inject.py  llm.py  report.py  schema.py
tests/: parallel_support.py  test_agentic_offload.py  test_agentic_study.py  test_agentic_workflow.py  test_backend_conformance.py  test_backends.py  test_conditions.py  test_containers_stores.py  test_events.py  test_example_backends.py  test_import.py  test_offload.py  test_offload_conformance.py  test_offload_equivalence.py  test_pdes_analyze.py  test_pdes_channel.py  test_pdes_equivalence.py  test_pdes_soak.py  test_pdes_sync.py  test_pdes_topology.py  test_process.py  test_replicate.py  test_resources.py  test_ride_hailing.py  test_ride_hailing_sharded.py  test_ride_hailing_study.py  test_rng_debug.py  test_rt.py  test_seed_streams.py  test_sim.py  test_streaming_cancel.py  test_trace.py
tests/behavioral/: conftest.py  test_condition.py  test_environment.py  test_event.py  test_exceptions.py  test_interrupts.py  test_process.py  test_resources.py  test_timeout.py
tests/docs/: __init__.py  guide_support.py  test_api_reference_coverage.py  test_migration_guide_coverage.py  test_migration_guide_snippets.py
